# workflow

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml
documents/: TODO.md  dto-README.md  requirements.txt  test.md
sample_worker/: handlers.yaml  test_handlers.py  zworkflow.yaml
src/zworkflow/: AGENTS.md  app_config.py
src/zworkflow/apis/: __init__.py  apis.py  mapper.py  models.py
src/zworkflow/core/: exceptions.py
src/zworkflow/core/models/: __init__.py  models.py
src/zworkflow/core/services/: __init__.py  workflow_def.py
src/zworkflow/dal/daos/: __init__.py  event.py  schema.py  step.py  step_def.py  step_def_dep.py  task.py  task_def.py  workflow.py  workflow_def.py
src/zworkflow/dal/dtos/: __init__.py  base.py  dtos.py
src/zworkflow/executor/: __main__.py  activities.py  generic_workflow.py  task_map.py
src/zworkflow/webui/: ZWorkflowClient.js  index.html  package-lock.json  package.json  vite.config.js
src/zworkflow/webui/src/: App.css  App.jsx  index.css
src/zworkflow/webui/src/components/: DagView.jsx  NewTaskDefinition.jsx  NewWorkflow.jsx  NewWorkflowDefinition.jsx  PopupPanel.jsx  Schemas.jsx  Sidebar.jsx  StepDefView.jsx  TaskDef.jsx  TaskDefinitions.jsx  TaskState.jsx  Workflow.jsx  WorkflowDefinition.jsx  WorkflowDefinitions.jsx  WorkflowState.jsx  WorkflowSummary.jsx  Workflows.jsx
tests/zworkflow/: conftest.py
tests/zworkflow/core/services/: test_workflow.py  test_workflow_def.py
tests/zworkflow/dal/daos/: test_event.py  test_schema.py  test_step.py  test_step_def.py  test_step_def_dep.py  test_task.py  test_task_def.py  test_workflow.py  test_workflow_def.py
