[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "zworkflow"
version = "0.0.6"
authors = [
    {name="Stone Zhong", email="stone.zhong@gmail.com"}
]
description = "Workflow Engine"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "pydantic",
    "fastapi",
    "SQLAlchemy",
    "uvicorn[standard]",
    "temporalio",
    "aiofiles",
    "psycopg2-binary",
    "cel_expr_python",
]

[project.urls]
Homepage = "https://github.com/stonezhong/workflow"
Issues = "https://github.com/stonezhong/workflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zworkflow"]
exclude = [
    "src/zworkflow/**/*.py",
]
artifacts = [
    "src/zworkflow/webui/dist/**/*",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
artifacts = [
    "src/zworkflow/webui/dist/**/*",
]
